--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton+SC&family=Gidole&family=Holtwood+One+SC&family=Mitr:wght@200;300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playwrite+DE+SAS&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Holtwood One SC", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 html,
@@ -9,4 +13,12 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+}
+
+main {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
