--- a/frontend/src/Pages/Cardapio/Cardapio.css
+++ b/frontend/src/Pages/Cardapio/Cardapio.css
@@ -14,10 +14,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   /* 🔹 sombra leve abaixo do header */
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
   z-index: 2;
+  gap: 30px;
+}
+
+.header-cardapio h1 {
+  letter-spacing: 2px;
+  font-size: 2.9rem;
+  text-align: center;
+}
+.header-cardapio h2 {
+  left: 1px;
+  color: yellow;
 }
 
 .sub-header {
@@ -25,6 +35,23 @@
   height: 180px;
   padding: 10px;
   border-bottom: 1px solid black;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.img-profile {
+  width: 10%;
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.photorebys {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .cardapio {
@@ -40,4 +67,36 @@
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08); /* sombra suave */
   border: none;
+}
+
+.scroll-options {
+  gap: 15px;
+  overflow-x: auto;
+  display: flex;
+  padding: 5px;
+  align-items: center;
+}
+
+.button-scroll {
+  background-color: transparent;
+  border: none;
+  padding: 5px;
+  text-align: center;
+}
+
+@media (max-width: 800px) {
+  .div-cardapio {
+    width: 99%;
+  }
+  .header-cardapio {
+    max-height: 100px;
+  }
+  .sub-header {
+    gap: 12px;
+    max-height: 150px;
+  }
+  .img-profile {
+    width: clamp(56px, 22vw, 88px);
+    aspect-ratio: 1 / 1;
+  }
 }
