--- a/frontend/src/Pages/Cardapio/Cardapio.css
+++ b/frontend/src/Pages/Cardapio/Cardapio.css
@@ -54,10 +54,6 @@
   height: 100%;
 }
 
-.cardapio {
-  padding: 20px;
-}
-
 .div-cardapio {
   width: 86%;
   max-width: 1040px; /* limite p/ não espalhar demais */
@@ -82,6 +78,21 @@
   border: none;
   padding: 5px;
   text-align: center;
+  transition: all 0.4s;
+  border-radius: 7px;
+}
+
+.button-scroll:hover {
+  /* background-color: rgba(92, 92, 92, 0.253); */
+  padding: 7px;
+  cursor: pointer;
+  box-shadow: 0px 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.button-scroll svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 800px) {
@@ -98,5 +109,18 @@
   .img-profile {
     width: clamp(56px, 22vw, 88px);
     aspect-ratio: 1 / 1;
+  }
+}
+
+.cardapio {
+  width: 100%;
+}
+
+@media (max-width: 500px) {
+  .cardapio {
+    width: 100%;
+  }
+  .div-cardapio {
+    width: 100%;
   }
 }
