--- a/frontend/src/components/ItemCardap/itenscardapio.css
+++ b/frontend/src/components/ItemCardap/itenscardapio.css
@@ -31,6 +31,14 @@
   padding: 16px;
   box-sizing: border-box;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+  border: none;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.card-produto:hover {
+  padding: 17px;
+  opacity: 0.8;
 }
 
 /* área da imagem: quadrada e sem vazar */
